--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -550,7 +550,7 @@ margin: 1rem;
           font-size: 20px;
 
       }
-      a:hover,a.active {
+      a:hover {
           background: none;
           color: #EB7575;
 
